--- a/index.html
+++ b/index.html
@@ -40,15 +40,26 @@
         <button id="submit" class="btn btn-outline-success" type="submit">Search</button>
       </section>
 
+      <div style="height:400px;" class="d-flex justify-content-center  align-items-center d-none" id="loader">
+        <div class="spinner-border text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
       <header class="text-center header">
         <h1 id="error" class="d-none"> no data found</h1>
       </header>
       <section>
         <div class="row row-cols-1 row-cols-md-4 g-4" id="phone_container">
-
         </div>
       </section>
+
+      <section class="text-center d-none" id="show_all" style="margin: 30px 0px;">
+        <div class="btn btn-bg btn-success "> Show All</div>
+      </section>
+
     </main>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
   </body>
